@@ -589,10 +589,13 @@ C<html>, C<xml>, or C<text> data is expected to be decoded characters, and will
 be encoded according to L</"response_charset">. C<json> data will be encoded to
 UTF-8.
 
-C<redirect> will print a redirection header if response headers have not yet
-been rendered, and will set a response status of 302 if none has been set by
+C<redirect> will set a L<Location> header if response headers have not yet been
+rendered, and will set a response status of 302 if none has been set by
 L</"set_response_status">. It will not set a C<Content-Type> response header.
 If response headers have already been rendered a warning will be emitted.
+
+The C<Date> response header will be set to the current time as an HTTP date
+string if not set manually.
 
 =head1 FUNCTIONS
 
@@ -603,7 +606,7 @@ The following convenience functions are provided but not exported.
   my $date = CGI::Tiny::epoch_to_date $epoch;
 
 Convert a Unix epoch timestamp to a RFC 1123 HTTP date string suitable for use
-in date and expiration headers.
+in HTTP headers such as C<Date> and C<Expires>.
 
 =head2 date_to_epoch
 
